# palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics/: pyproject.toml
viikko1/nhl-statistics/src/: .coverage  index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: test_statistics_service.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: index.py
viikko2/nhl-reader/: .pylintrc  pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login/: log.html  output.xml  report.html  retro.md
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: login.robot  register.robot
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/: .coverage  pankki.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/tennis/: review.md  vibe.md
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py  komennot.py  sovelluslogiikka.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset-original/src/: kps_tekoaly.py
viikko7/kivi-paperi-sakset/src/: app.py  index.py  kps_parempi_tekoaly.py  pyproject.toml  tekoaly_parannettu.py
viikko7/kivi-paperi-sakset/src/tests/: test_app.py  test_logic.py
