[tool.poetry]
name = "kivi-paperi-sakset"
version = "0.1.0"
description = "Kivi-Paperi-Sakset web UI"
authors = ["MarkusSKoo <markus@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3"
pytest = "^8.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
